--- a/sass/style.css
+++ b/sass/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 * {
   margin: 0;
   padding: 0;
@@ -15,7 +16,7 @@ body header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
+  width: 100vw;
   padding: 10px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -25,16 +26,50 @@ body header {
           align-items: center;
 }
 
-body header #menu {
+body header #menu-icon {
   margin: 0 10px;
 }
 
-body header #menu:hover {
+body header #menu-icon:hover {
   cursor: pointer;
 }
 
 body header #avatar {
   width: 30px;
+}
+
+body main {
+  width: 100vw;
+}
+
+body main section {
+  width: 100%;
+}
+
+body main section #img-principal {
+  width: 100%;
+  height: 60vh;
+}
+
+body main section .prev {
+  position: absolute;
+  top: 200px;
+  left: 10px;
+  font-size: 2rem;
+  color: #ffffff;
+  z-index: 1;
+}
+
+body main section .next {
+  position: absolute;
+  top: 200px;
+  right: 10px;
+  font-size: 2rem;
+  color: #ffffff;
+}
+
+body main section .img-miniaturas {
+  display: none;
 }
 
 nav ul {
@@ -51,6 +86,7 @@ nav ul {
   padding: 20px;
   width: 40%;
   height: 100vh;
+  z-index: 2;
 }
 
 nav ul #close {
@@ -149,5 +185,98 @@ nav ul li {
   border-radius: 10px;
   font-size: 1rem;
   font-weight: 700;
+}
+
+.section-info-art {
+  padding: 20px;
+}
+
+.section-info-art h6 {
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  color: #ff7d1a;
+}
+
+.section-info-art h1 {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.section-info-art p {
+  font-size: 0.95rem;
+  margin-bottom: 1.5rem;
+}
+
+.section-info-art #price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.section-info-art #price .descuento {
+  font-weight: 700;
+  color: #ff7d1a;
+  background-color: #ffede0;
+  padding: 5px;
+  border-radius: 5px;
+  margin-right: 130px;
+}
+
+.section-info-art #price .old-price {
+  font-weight: 700;
+  color: #68707d;
+  text-decoration: line-through;
+}
+
+.section-info-art form .cantidad {
+  position: relative;
+}
+
+.section-info-art form .cantidad input {
+  width: 90%;
+  height: 2rem;
+  border-radius: 5px;
+  background-color: #f7f8fd;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.section-info-art form .cantidad #menos {
+  position: absolute;
+  left: 12px;
+  top: 15px;
+}
+
+.section-info-art form .cantidad #mas {
+  position: absolute;
+  right: 45px;
+  top: 10px;
+}
+
+.section-info-art form button {
+  width: 90%;
+  height: 3rem;
+  font-size: 1.2rem;
+  border: 0;
+  color: #ffffff;
+  font-weight: 700;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #fc8b35), color-stop(50%, #ff7d1a));
+  background: linear-gradient(to bottom, #fc8b35 50%, #ff7d1a 50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-info-art form button svg {
+  margin-right: 5px;
 }
 /*# sourceMappingURL=style.css.map */
