--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
 $Orange: #ff7d1a;
 $Orange-light: #fc8b35;
@@ -22,11 +23,11 @@ body{
     width: 100vw;
     header{
         display: flex;
-        width: 100%;
+        width: 100vw;
         padding: 10px;
         justify-content: space-between;
         align-items: center;
-        #menu{
+        #menu-icon{
             margin: 0 10px;
             &:hover{
                 cursor: pointer;
@@ -34,6 +35,34 @@ body{
         }
         #avatar{
             width: 30px;
+        }
+    }
+    main{
+        width: 100vw;
+        section{
+            width: 100%;
+            #img-principal{
+                width: 100%;
+                height: 60vh;
+            }
+            .prev{
+                position: absolute;
+                top: 200px;
+                left: 10px;
+                font-size: 2rem;
+                color: $White;
+                z-index: 1;
+            }
+            .next{
+                position: absolute;
+                top: 200px;
+                right: 10px;
+                font-size: 2rem;
+                color: $White;
+            }
+            .img-miniaturas{
+                display: none;
+            }
         }
     }
 }
@@ -49,6 +78,7 @@ nav ul{
     padding: 20px;
     width: 40%;
     height: 100vh;
+    z-index: 2;
     #close{
         margin: 0 0 20px 0;
         &:hover{
@@ -124,5 +154,77 @@ nav ul{
         border-radius: 10px;
         font-size: 1rem;
         font-weight: 700;
+    }
+}
+
+.section-info-art{
+    padding: 20px;
+    h6{
+        margin-bottom: 10px;
+        text-transform: uppercase;
+        color: $Orange;
+    }
+    h1{
+        font-size: 2rem;
+        margin-bottom: 1.5rem;
+    }
+    p{
+        font-size: 0.95rem;
+        margin-bottom: 1.5rem;
+    }
+    #price{
+        display: flex;
+        justify-content: space-between;
+        .descuento{
+            font-weight: 700;
+            color: $Orange;
+            background-color: $Pale;
+            padding: 5px;
+            border-radius: 5px;
+            margin-right: 130px;
+        }
+        .old-price{
+            font-weight: 700;
+            color: $Dark-grayish-blue;
+            text-decoration: line-through;
+        }
+    }
+    form{
+        .cantidad{
+            position: relative;
+            input{
+                width: 90%;
+                height: 2rem;
+                border-radius: 5px;
+                background-color: $Light-grayish-blue;
+                text-align: center;
+                margin-bottom: 10px;
+            }
+            #menos{
+                position: absolute;
+                left: 12px;
+                top: 15px;
+            }
+            #mas{
+                position: absolute;
+                right: 45px;
+                top: 10px;
+            }
+        }
+        button{
+            width: 90%;
+            height: 3rem;
+            font-size: 1.2rem;
+            border: 0;
+            color: $White;
+            font-weight: 700;
+            background: linear-gradient(to bottom, $Orange-light 50%, $Orange 50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            svg{
+                margin-right: 5px;
+            }
+        }
     }
 }
