--- a/sass/style.css
+++ b/sass/style.css
@@ -237,23 +237,24 @@ nav ul li {
 
 .section-info-art form .cantidad input {
   width: 90%;
-  height: 2rem;
+  height: 2.2rem;
   border-radius: 5px;
   background-color: #f7f8fd;
   text-align: center;
   margin-bottom: 10px;
+  border: 1px solid #fc8b35;
 }
 
 .section-info-art form .cantidad #menos {
   position: absolute;
   left: 12px;
-  top: 15px;
+  top: 17px;
 }
 
 .section-info-art form .cantidad #mas {
   position: absolute;
   right: 45px;
-  top: 10px;
+  top: 12px;
 }
 
 .section-info-art form button {
