--- a/sass/style.scss
+++ b/sass/style.scss
@@ -194,21 +194,22 @@ nav ul{
             position: relative;
             input{
                 width: 90%;
-                height: 2rem;
+                height: 2.2rem;
                 border-radius: 5px;
                 background-color: $Light-grayish-blue;
                 text-align: center;
                 margin-bottom: 10px;
+                border: 1px solid $Orange-light;
             }
             #menos{
                 position: absolute;
                 left: 12px;
-                top: 15px;
+                top: 17px;
             }
             #mas{
                 position: absolute;
                 right: 45px;
-                top: 10px;
+                top: 12px;
             }
         }
         button{
