--- a/sass/style.scss
+++ b/sass/style.scss
@@ -95,6 +95,7 @@ nav ul{
 #indice-cart{
     text-align: center;
     font-size: .7rem;
+    font-weight: 700;
     position: absolute;
     background-color: $Indice-cart-color;
     color: $White;
@@ -113,10 +114,13 @@ nav ul{
     position: absolute;
     width: 97%;
     height: 35vh;
-    right: 5px;
+    right: 50px;
     background-color: $White;
-    border: 1px solid $Orange;
+    border: 0;
     border-radius: 10px;
+    box-shadow: 20px 20px 20px 0px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 20px 20px 20px 0px rgba(0,0,0,0.3);
+    -moz-box-shadow: 20px 20px 20px 0px rgba(0,0,0,0.3);
     h4{
         margin-top: 10px;
     }
@@ -175,13 +179,16 @@ nav ul{
     #price{
         display: flex;
         justify-content: space-between;
-        .descuento{
-            font-weight: 700;
-            color: $Orange;
-            background-color: $Pale;
-            padding: 5px;
-            border-radius: 5px;
-            margin-right: 130px;
+        .precio-art{
+            display: flex;
+            gap: 1rem;
+            .descuento{
+                font-weight: 700;
+                color: $Orange;
+                background-color: $Pale;
+                padding: 5px;
+                border-radius: 5px;
+            }
         }
         .old-price{
             font-weight: 700;
@@ -225,6 +232,150 @@ nav ul{
             align-items: center;
             svg{
                 margin-right: 5px;
+            }
+        }
+    }
+}
+
+
+@media (min-width:1100px){
+    body{
+        header{
+            border-bottom: 1px solid $Grayish-blue;
+            #menu-icon{
+                display: none;
+            }
+            #indice-cart{
+                top: 20px;
+                right: 40px;
+                width: 20px;
+                height: 20px;
+                font-size: 1.1rem;
+            }
+            #cart{
+                width: 40px;
+                height: 30px;
+                margin-right: 15px;
+            }
+            #avatar{
+                width: 30px;
+            }
+        }
+        main{
+            display: flex;
+            gap: 80px;
+            padding: 4rem 4rem 4rem 4rem;
+            section{
+                position: relative;
+                #img-principal{
+                    border-radius: 10px;
+                }
+                .img-miniaturas{
+                    display: flex;
+                    gap: 2rem;
+                    padding: 1.5rem 0;
+                    img{
+                        width: 100px;
+                        border-radius: 10px;
+                    }
+                }
+                .prev{
+                    left: 75px;
+                    display: none;
+                }
+                .next{
+                    display: none;
+                }
+            }
+        }
+    }
+    
+    nav{
+        width: 50%;
+        margin-right: 200px;
+    }
+
+    nav ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        position: static;
+        left: 0;
+        top: 0;
+        background-color: transparent;
+        list-style: none;
+        padding: 10px;
+        width: auto;
+        height: auto;
+        z-index: 0;
+        #close{
+            display: none;
+        }
+        li{
+            margin: 10px 0;
+            font-size: 1.4rem;
+            font-weight: 400;
+        }
+    }
+    
+    #carro{
+        width: 40%;
+        height: 40vh;
+        z-index: 2;
+        h4{
+            margin-top: 20px;
+            font-size: 1.5rem;
+        }
+        section{
+            img{
+                width: 90px;
+            }
+            #cart-info{
+                #product-cart{
+                    font-size: 1.3rem;
+                }
+                #total-cart{
+                    font-size: 1.2rem;
+                    .precio-final{
+                        font-size: 1.2rem;
+                    }
+                }
+            }
+        }
+        #check{
+            margin: 10px 0;
+            width: 90%;
+            height: 3.5rem;
+            font-size: 1.4rem;
+        }
+    }
+    
+    .section-info-art{
+        padding: 3rem 0;
+        h6{
+            font-size: 1.2rem;
+        }
+        #price{
+            flex-direction: column;
+        }
+        form{
+            display: flex;
+            gap: 1rem;
+            .cantidad{
+                input{
+                    height: 3rem;
+                    font-size: 1.5rem;
+                    margin: 0;
+                }
+                #menos{
+                    top: 23px;
+                }
+                #mas{
+                    top: 17px;
+                }
+            }
+            button{
+                width: 90%;
             }
         }
     }
